add: все конфигурируемые параметры вынесены в константы для удобства, больше комментариев, поддержка прозрачности, обновлено описание

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "itp",
-  "version": "0.0.0",
-  "description": "Утилита для создания макросов, с помощью которых можно перенести изображение любого размера (но кратного 64!) на доски для рисования.",
+  "name": "itpe",
+  "version": "1.0.0",
+  "description": "Утилита для создания макросов, с помощью которых можно перенести изображение любого размера на доски для рисования",
   "main": "itpe.js",
-  "author": "helix, exi66, skyvoker1",
+  "author": "exi66",
   "license": "MIT",
   "dependencies": {
     "pngjs": "^3.3.2"
